[package]
name = "axum_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
rustls = "0.20"
axum-server = { version = "0.3", features = ["tls-rustls"] }
