[package]
name = "axum_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
rustls = "0.23.16"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
tracing = "0.1"
tracing-subscriber = "0.3"
